# whisrs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml  sync-installer.yml
contrib/: whisrs.1  whisrs.service  whisrsd.1
contrib/gnome-shell-extension/: README.md
contrib/gnome-shell-extension/whisrs-overlay@eresende.github/: extension.js  metadata.json  stylesheet.css
crates/asr-dedup/src/: lib.rs
crates/audio-silence-gate/src/: lib.rs
crates/xkb-type/: Cargo.toml
crates/xkb-type/src/: keyboard.rs  keymap.rs  lib.rs  wayland_vk.rs
debian/: changelog  control  copyright  postinst  rules  whisrs.install  whisrs.manpages  whisrs.postinst.debhelper  whisrs.postrm.debhelper
docs/: configuration.md  faq.md  troubleshooting.md  version-roadmap.md
scripts/: build-deb.sh
specs/openai-compatible-realtime/: DESIGN.md  README.md  TASKS.md
src/: gnome_shell.rs  lib.rs  state.rs
src/audio/: feedback.rs  playback.rs  recovery.rs
src/cli/: main.rs
src/config/: edit.rs  mod.rs  setup.rs
src/daemon/: main.rs
src/hotkey/: mod.rs  parse.rs
src/overlay/: mod.rs  service.rs  transcript.rs
src/review/: mod.rs
src/transcription/: asr_sidecar.rs  deepgram.rs  groq.rs  local_parakeet.rs  local_vosk.rs  local_whisper.rs  mod.rs  openai_compatible_realtime.rs  openai_realtime.rs  openai_rest.rs
src/transcription/openai_realtime_protocol/: engine.rs  mod.rs  (+2 more)
src/tray/: mod.rs  service.rs
src/tts/: deepgram_aura.rs  groq.rs  mod.rs  openai_compat.rs
src/window/: dbus.rs  gnome_shell.rs  mod.rs
(+1 files in other folders)
