[package]
name = "xkb-type"
version = "0.1.2"
edition = "2021"
rust-version = "1.74"
description = "Virtual keyboard typing via evdev/uinput with XKB layout-aware key mapping"
license = "MIT"
repository = "https://github.com/y0sif/whisrs"
readme = "README.md"
keywords = ["keyboard", "uinput", "xkb", "linux", "wayland"]
categories = ["os::linux-apis", "hardware-support"]

[features]
default = []
logging = ["dep:log"]
arboard = ["dep:arboard"]
wayland-vk = ["dep:wayland-client", "dep:wayland-protocols-misc", "dep:rustix"]

[dependencies]
evdev = "0.12"
xkbcommon = "0.8"
anyhow = "1"
thiserror = "2"
serde_json = "1"
log = { version = "0.4", optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols-misc = { version = "0.3", features = ["client"], optional = true }
rustix = { version = "0.38", features = ["fs"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", optional = true, default-features = false }

[dev-dependencies]
# Used only by the `vk_recorder` example (the focused client in the headless
# stress harness): it needs xdg-shell to map a toplevel and acquire keyboard
# focus so the compositor routes the injected wl_keyboard events to it.
wayland-protocols = { version = "0.32", features = ["client"] }
